# bedrock

./: .gitignore  LICENSE  latest_changes.md
backend/: Cargo.toml
backend/services/ingestion/: Cargo.toml
backend/services/ingestion/src/: app.rs  custom_err.rs  ingest.rs  main.rs  rpc.rs  state.rs
