[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
dotenvy = "0.15.7"

